--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -38,5 +38,53 @@
         "news":"News",
         "events":"Events",
         "networks":"Networks"
+    }, "contact":{
+        "useful_links":[{
+               "title":"Town hall",
+               "img":"./assets/img/news2.jpg",
+               "description":"The city hall of Vaise can inform you about the various administrative points.",
+               "address":"6 Place du Marché, 69009 Lyon", 
+               "tel":"06 40 67 58 46", 
+               "mail":"mairie.vaise@gmail.com", 
+               "website":"http://www.mairie9.lyon.fr/"
+        }, {
+               "title":"Town hall",
+               "img":"./assets/img/news2.jpg",
+               "description":"The city hall of Vaise can inform you about the various administrative points.",
+               "address":"6 Place du Marché, 69009 Lyon", 
+               "tel":"06 40 67 58 46", 
+               "mail":"mairie.vaise@gmail.com", 
+               "website":"http://www.mairie9.lyon.fr/"
+        }, {
+               "title":"Town hall",
+               "img":"./assets/img/news2.jpg",
+               "description":"The city hall of Vaise can inform you about the various administrative points.",
+               "address":"6 Place du Marché, 69009 Lyon", 
+               "tel":"06 40 67 58 46", 
+               "mail":"mairie.vaise@gmail.com", 
+               "website":"http://www.mairie9.lyon.fr/"
+        }, {
+               "title":"Town hall",
+               "img":"./assets/img/news2.jpg",
+               "description":"The city hall of Vaise can inform you about the various administrative points.",
+               "address":"6 Place du Marché, 69009 Lyon", 
+               "tel":"06 40 67 58 46", 
+               "mail":"mairie.vaise@gmail.com", 
+               "website":"http://www.mairie9.lyon.fr/"
+        }],
+        "address":"Address",
+        "telephone":"Telephone",
+        "website":"Website",
+        "contact_us":"Contact us",
+        "name":"Name",
+        "subject":"Subject",
+        "name_error":"Please enter your name",
+        "subject_error":"Please enter your subject",
+        "mail_error":"Please enter an e-mail valid address",
+        "message_error":"Please enter your message",
+        "checkbox_error":"Please not mark the checkbox",
+        "placeholder_name":"First and last name",
+        "placeholder_subject":"Message subject",
+        "send":"Send"
     }
 }
