--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -17,7 +17,7 @@
         "historic_places":"Lieux historiques",
         "exhibitions":"Expositions",
         "media_library":"Médiathèque",
-        "useful_links":"Liens utiles",
+        "usefull_links":"Liens utiles",
         "legal_notice":"Mentions légales",
         "lang_short":"en",
         "lang_long":"English"
@@ -39,24 +39,24 @@
         "events":"Évènements",
         "networks":"Les réseaux"
     }, "contact":{
-        "useful_links":[{
+        "usefull_links":[{
                "title":"Mairie",
-               "img":"./assets/img/news2.jpg",
+               "img":"./assets/img/usefull_links/mairie-lutile.jpg",
                "description":"La mairie de Vaise pourra vous renseigner sur les différents points administratifs.",
                "address":"6 Place du Marché, 69009 Lyon", 
                "tel":"06 40 67 58 46", 
                "mail":"mairie.vaise@gmail.com", 
                "website":"http://www.mairie9.lyon.fr/"
         }, {
-               "title":"Mairie",
+               "title":"Gare de Vaise",
                "img":"./assets/img/news2.jpg",
-               "description":"La mairie de Vaise pourra vous renseigner sur les différents points administratifs.",
-               "address":"6 Place du Marché, 69009 Lyon", 
-               "tel":"06 40 67 58 46", 
-               "mail":"mairie.vaise@gmail.com", 
-               "website":"http://www.mairie9.lyon.fr/"
+               "description":"Accès direct au quartier de Vaise via la train. Consulter les horaires sur le site de la SNCF ci-dessous.",
+               "address":"2 Place de Paris 69009 Lyon", 
+               "tel":"36 35",
+               "mail":"",
+               "website":"http://www.gares-sncf.com/fr/gare/frhcd/lyon-vaise"
         }, {
-               "title":"Mairie",
+               "title":"TCL à Vaise",
                "img":"./assets/img/news2.jpg",
                "description":"La mairie de Vaise pourra vous renseigner sur les différents points administratifs.",
                "address":"6 Place du Marché, 69009 Lyon", 
@@ -86,5 +86,25 @@
         "placeholder_name":"Prénom et nom",
         "placeholder_subject":"Sujet du message",
         "send":"Envoyer"
-    }
+    }, "news":[{
+               "title":"Inauguration de la Halte",
+               "img":"./assets/img/clocher.jpg",
+               "text":"Née de la volonté de l’église de l’Annonciation de crée du lien social entre les habitants du quartier de Vaise, la Halte a ouvert ces portes le 10 Octobre 2015. Cet espace est ouvert à tous et se veut convivial. C’est le lieu du « bien vivre ensemble » qui favorise les rencontres autour d’un verre, d’un repas, d’un atelier sur une thématique … Une expérience unique à ne louper sous aucun prétexte. Habitant du quartier de Vaise ou simple visiteur, arrêtez-vous !"
+        }, {
+               "title":"Convergence Vélo 2015",
+               "img":"./assets/img/news2.jpg",
+               "text":"Pour sa 4ème édition, la Convergence Vélo donne rendez-vous à tous les cyclistes du 9ème le Dimanche 20 Septembre 2016, place Valmy à 14h. Découvrez ou redécouvrez le 9ème arrondissement comme vous ne l’avez jamais vu. C’est aussi l’occasion pour petits et grands de partager un moment convivial lors de cette sortie vélo. Le parcours vous emmène de la place Valmy en passant par l’Auditorium puis finir dans le jolie Parc des Berges."
+        }, {
+               "title":"L.I.R (Livre In Room)",
+               "img":"./assets/img/news2.jpg",
+               "text":"L’installation numérique L.I.R (Livre In Room) est un dispositif conçu pour véritable immersion littéraire. Le livre est bien entendu au cœur de ce système. Il permet à la suite de la sélection d’un livre, de déclencher une séquence visuelle et sonore. Chaque visiteur repart alors avec une expérience unique de « lecture augmentée ». En accès libre et gratuit pour les amoureux de la lecture au Théâtre Nouvelle génération."
+        }, {
+               "title":"Micro Mondes",
+               "img":"./assets/img/theatre.jpg",
+               "text":"Micro Mondes propose pour sa 3ème édition, un festival d’arts immersifs centré sur les créations contemporaines. Micro Mondes regroupe des artistes de théâtre, des arts plastiques, de la danse, du cirque ou encore du multimédia. Ce festival vous entraine au cœur d’univers intimistes et sensoriels en regroupant images, sons, sensations tactiles ou encore poétiques. Cet évènement se déroulera à Vaise au Théâtre Nouvelle Génération / Centre Dramatique National de Lyon du 24 au 29 Novembre 2015"
+        }, {
+               "title":"Acrobates",
+               "img":"./assets/img/news2.jpg",
+               "text":"Acrobates est un spectacle centré sur la vie, l’amitié et la tendresse. Les deux acteurs raconte un voyage long et tumultueux voyage vers l’âge adulte. Ce spectacle mêle le deuil, la vie et les paysages oniriques. Ces derniers sont exposés au public grâce à l’interprétation des deux acteurs acrobates et danseurs. Stéphane Ricordel et Olivier Meyrou donnerons leurs représentations au Théâtre Nouvelle Génération du Vendredi 25 Septembre jusqu’au Dimanche 27 Septembre le soir à 20h."
+        }]
 }
