--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -50,8 +50,8 @@
         }, {
                "title":"Gare de Vaise",
                "img":"./assets/img/usefull_links/gare-de-vaise.jpg",
-               "description":"Accès direct au quartier de Vaise via la train. Consulter les horaires sur le site de la SNCF ci-dessous.",
-               "address":"2 Place de Paris 69009 Lyon", 
+               "description":"Accès direct au quartier de Vaise via le train. Consulter les horaires sur le site de la SNCF ci-dessous.",
+               "address":"2 Place de Paris, 69009 Lyon", 
                "tel":"36 35",
                "website":"http://www.gares-sncf.com/fr/gare/frhcd/lyon-vaise"
         }, {
@@ -60,14 +60,14 @@
                "description":"Se déplacer à Vaise avec les Transports en Commun Lyonnais",
                "address":"2-4 Place du Paris, 69009 Lyon", 
                "tel":"04 26 10 12 12",
-               "website":"http://www.tcl.fr/Pied-de-page/Nous-ecrire"
+               "website":"http://www.tcl.fr/"
         }, {
                "title":"Médiathèque de Vaise",
                "img":"./assets/img/usefull_links/mediatheque.jpg",
                "description":"La médiathèque vous invite pour un moment de détente.",
                "address":"Place Valmy, 69009 Lyon", 
                "tel":"04 72 85 66 20", 
-               "website":"http://www.mairie9.lyon.fr/"
+               "website":"https://www.bm-lyon.fr/15-bibliotheques-et-un-bibliobus/mediatheque-de-vaise/"
         }],
         "address":"Adresse",
         "telephone":"Téléphone",
@@ -79,7 +79,7 @@
         "subject_error":"Veuillez saisir un sujet",
         "mail_error":"Veuillez saisir une addresse mail valide",
         "message_error":"Veuillez saisir votre message",
-        "checkbox_error":"Veuillez ne pas cocher la checkbox",
+        "checkbox_error":"Veuillez ne pas cocher la case",
         "placeholder_name":"Prénom et nom",
         "placeholder_subject":"Sujet du message",
         "send":"Envoyer"
@@ -107,6 +107,6 @@
                "title":"Acrobates",
                "img":"./assets/img/news2.jpg",
                "type":"event",
-               "text":"Acrobates est un spectacle centré sur la vie, l’amitié et la tendresse. Les deux acteurs raconte un voyage long et tumultueux voyage vers l’âge adulte. Ce spectacle mêle le deuil, la vie et les paysages oniriques. Ces derniers sont exposés au public grâce à l’interprétation des deux acteurs acrobates et danseurs. Stéphane Ricordel et Olivier Meyrou donnerons leurs représentations au Théâtre Nouvelle Génération du Vendredi 25 Septembre jusqu’au Dimanche 27 Septembre le soir à 20h."
+               "text":"Acrobates est un spectacle centré sur la vie, l’amitié et la tendresse. Les deux acteurs raconte un long et tumultueux voyage vers l’âge adulte. Ce spectacle mêle le deuil, la vie et les paysages oniriques. Ces derniers sont exposés au public grâce à l’interprétation des deux acteurs acrobates et danseurs. Stéphane Ricordel et Olivier Meyrou donnerons leurs représentations au Théâtre Nouvelle Génération du Vendredi 25 Septembre jusqu’au Dimanche 27 Septembre le soir à 20h."
         }]
 }
