Modification fr.json news

--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -85,7 +85,7 @@
         "send":"Envoyer"
     }, "news":[{
                "title":"Inauguration de la Halte",
-               "img":"./assets/img/clocher.jpg",
+               "img":"./assets/img/news/clocher.jpg",
                "type":"news",
                "text":"Née de la volonté de l’église de l’Annonciation de crée du lien social entre les habitants du quartier de Vaise, la Halte a ouvert ces portes le 10 Octobre 2015. Cet espace est ouvert à tous et se veut convivial. C’est le lieu du « bien vivre ensemble » qui favorise les rencontres autour d’un verre, d’un repas, d’un atelier sur une thématique … Une expérience unique à ne louper sous aucun prétexte. Habitant du quartier de Vaise ou simple visiteur, arrêtez-vous !"
         }, {
