Fix news pict + news lang change

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -85,7 +85,7 @@
         "send":"Send"
     }, "news":[{
                "title":"La Halte inauguration",
-               "img":"./assets/img/clocher.jpg",
+               "img":"./assets/img/news/clocher.jpg",
                "type":"news",
                "text":"Born with the association of the Annonciation's church to create a social link between inhabitants from Vaise quarter, la Halte oppened on October 10th 2015. This space is open for everyone and has to be sociable. It's the location of « good living together » which favorisate meetings with a drink, a meal, a workshop on a thematic … A unique experience to not miss at any pretext. Inhabitant of Vaise quarter or simple visitor, pass by !"
         }, {
