Ajout de la fiche produit

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -25,6 +25,7 @@
     },
       "more_details":"More details",
       "back_to_news_list":"Back to news list",
+      "back_to_shop":"Back to shop",
       "display_more":"Display more",
       "sidebar": {
         "mayor_word":"Mayor word",
