--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -25,6 +25,7 @@
     },
       "more_details":"Plus de détails",
       "back_to_news_list":"Retour à la liste des actus",
+      "back_to_shop":"Retour à la boutique",
       "display_more":"Afficher plus",
       "sidebar": {
         "mayor_word":"Le mot du maire",
