--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -1,196 +1,1 @@
-{
-    "nav": {
-        "home": "Accueil",
-        "everyday": "Vie pratique",
-        "move": "Se d\u00e9placer",
-        "restaurants_bars": "Restaurants \/ Bars",
-        "shops": "Commerces",
-        "associations": "Associations",
-        "hotels": "H\u00f4tels",
-        "leisures": "Loisirs",
-        "parks": "Espaces verts",
-        "sports": "Sports",
-        "cinemas": "Cin\u00e9mas",
-        "theaters": "Th\u00e9\u00e2tres",
-        "culture": "Culture",
-        "museums": "Mus\u00e9es",
-        "historic_places": "Lieux historiques",
-        "exhibitions": "Expositions",
-        "media_library": "M\u00e9diath\u00e8que",
-        "usefull_links": "Liens utiles",
-        "legal_notice": "Mentions l\u00e9gales",
-        "listnews": "Toutes les actus",
-        "lang_short": "en",
-        "lang_long": "English"
-    },
-    "more_details": "Plus de d\u00e9tails",
-    "previous": "Pr\u00e9c\u00e9dent",
-    "open": "Ouvert",
-    "close": "Fermé",
-    "next": "Suivant",
-    "back": "Retour",
-    "back_home": "Retour \u00e0 l'accueil",
-    "back_to_news_list": "Retour \u00e0 la liste des actus",
-    "back_to_shop": "Retour \u00e0 la boutique",
-    "display_more": "Afficher plus",
-    "sidebar": {
-        "mayor_word": "Le mot du maire",
-        "mayor_word_content": "Bonjour et bienvenue dans le site du quartier de Vaise. Je vous invite \u00e0 d\u00e9couvrir cette endroit convivial et chaleureux au travers des diff\u00e9rentes rubriques. Vous en apprendrez plus sur l'ambiance de Vaise.",
-        "last_news": "Derni\u00e8re actu",
-        "weather": {
-            "label": "M\u00e9t\u00e9o",
-            "temperature": "Temp\u00e9rature",
-            "wind_speed": "Vitesse du vent",
-            "humidity": "Humidit\u00e9"
-        },
-        "share": "Partager",
-        "print": "Imprimer"
-    },
-    "home": {
-        "now": "En ce moment",
-        "all": "TOUT",
-        "news": "Actus",
-        "events": "\u00c9v\u00e8nements",
-        "networks": "Les r\u00e9seaux",
-        "highlight_img": 3,
-        "highlight_img_text": "Actualit\u00e9 \u00e0 mettre en avant"
-    },
-    "contact": {
-        "usefull_links": [
-            {
-                "title": "Mairie du 9\u00e8me",
-                "img": ".\/assets\/img\/usefull_links\/mairie.jpg",
-                "description": "La mairie de Vaise pourra vous renseigner sur les diff\u00e9rents points administratifs.",
-                "address": "6 Place du March\u00e9, 69009 Lyon",
-                "tel": "06 40 67 58 46",
-                "mail": "mairie.vaise@gmail.com",
-                "website": "http:\/\/www.mairie9.lyon.fr\/",
-                "website-display": "Mairie du 9\u00e8me"
-            },
-            {
-                "title": "Gare de Vaise",
-                "img": ".\/assets\/img\/usefull_links\/gare-de-vaise.jpg",
-                "description": "Acc\u00e8s direct au quartier de Vaise via le train. Consulter les horaires sur le site de la SNCF ci-dessous.",
-                "address": "Place de Paris, 69009 Lyon",
-                "tel": "36 35",
-                "website": "http:\/\/www.gares-sncf.com\/fr\/gare\/frhcd\/lyon-vaise",
-                "website-display": "Gare de Vaise"
-            },
-            {
-                "title": "TCL Vaise",
-                "img": ".\/assets\/img\/usefull_links\/metro-valmy.jpg",
-                "description": "Se d\u00e9placer \u00e0 Vaise avec les Transports en Commun Lyonnais",
-                "address": "Place du Paris, 69009 Lyon",
-                "tel": "04 26 10 12 12",
-                "website": "http:\/\/www.tcl.fr\/",
-                "website-display": "Transport en Commun Lyonnais"
-            },
-            {
-                "title": "M\u00e9diath\u00e8que de Vaise",
-                "img": ".\/assets\/img\/usefull_links\/mediatheque.jpg",
-                "description": "La m\u00e9diath\u00e8que vous invite pour un moment de d\u00e9tente.",
-                "address": "Place Valmy, 69009 Lyon",
-                "tel": "04 72 85 66 20",
-                "website": "https:\/\/www.bm-lyon.fr\/15-bibliotheques-et-un-bibliobus\/mediatheque-de-vaise\/",
-                "website-display": "M\u00e9diath\u00e8que de Vaise"
-            }
-        ],
-        "address": "Adresse",
-        "phone": "T\u00e9l\u00e9phone",
-        "website": "Site",
-        "contact_us": "Nous contacter",
-        "name": "Nom",
-        "subject": "Sujet",
-        "name_error": "Veuillez saisir votre nom",
-        "subject_error": "Veuillez saisir un sujet",
-        "mail_error": "Veuillez saisir une addresse mail valide",
-        "message_error": "Veuillez saisir votre message",
-        "placeholder_name": "Pr\u00e9nom et nom",
-        "placeholder_subject": "Sujet du message",
-        "send": "Envoyer"
-    },
-    "error": {
-        "404": "<h1>Vous \u00eates perdu ?!<br>Cette page semble ne pas exister.<br><a href=\".\/\">Revenir \u00e0 l'accueil<\/a><\/h1>",
-        "label": "Erreur",
-        "no_news": "Article indisponible",
-        "no_product": "Article indisponible"
-    },
-    "shop": {
-        "label": "Boutique",
-        "cheap_price": "10\u20ac et moins",
-        "normal_price": "entre 10\u20ac et 20\u20ac",
-        "expensive_price": "20\u20ac et plus",
-        "add_to_cart": "Ajouter au panier",
-        "show_cart": "Afficher le panier"
-    },
-    "admin": {
-        "label": "Administration",
-        "save": "Enregistrer",
-        "add": "Ajouter",
-        "modify": "Modifier",
-        "delete": "Supprimer",
-        "date_added": "Date d'ajout",
-        "img": "Image",
-        "import": "Importer",
-        "news": {
-            "first": "Publi\u00e9",
-            "second": "Titre",
-            "title_fr": "Titre fran\u00e7ais",
-            "title_en": "Titre anglais",
-            "content_fr": "Contenu fran\u00e7ais",
-            "content_en": "Contenu anglais",
-            "date_publish": "Date de publication",
-            "important": "Important ?",
-            "type": "Type"
-        },
-        "product": {
-            "first": "Nom",
-            "second": "Prix",
-            "name_fr": "Nom fran\u00e7ais",
-            "name_en": "Nom anglais",
-            "company": "Entreprise",
-            "price": "Prix",
-            "desc_fr": "Description fran\u00e7aise",
-            "desc_en": "Description anglaise",
-            "vat": "TVA",
-            "transportation_price": "Frais de port"
-        }
-    },
-    "category": {
-        "everyday": [
-            {
-                "title": "Se déplacer",
-                "img": ".\/assets\/img\/category\/sedeplacer.png",
-                "description": "Regroupe l'ensemble des moyens de transport disponible à Vaise afin d'assurer au mieux vos déplacements entre les différents lieux et évènements"
-            },
-            {
-                "title": "Restauration/Bar",
-                "img": ".\/assets\/img\/restaurants\/Saigon_Wok.JPG",
-                "description": "Venez découvrir les meilleurs restaurants et bars du quartier de Vaise afin de contenter les fins gourmets et/ou les amateurs de bon breuvage."
-            },
-            {
-                "title": "Comerces",
-                "img": ".\/assets\/img\/category\/cinema.jpg",
-                "description": "Rencontrer les commerçants du quartier de Vaise."
-            },
-            {
-                "title": "Associations",
-                "img": ".\/assets\/img\/category\/association.jpg",
-                "description": "Vous souhaitez participer à la vie associative du quartier de Vaise, n'hésité plus cette rubrique vous ai consacré."
-            },
-            {
-                "title": "Hôtel",
-                "img": ".\/assets\/img\/category\/hotel.png",
-                "description": "Idéal pour faire une pause dans votre visite, voici notre sélection d'hôtels."
-            }
-        ]
-    },
-    "sscat": {
-        "open": "Ouvert",
-        "close": "Fermé",
-        "google_advice": "avis Google",
-        "show_all_advice": "Voir les avis",
-        "hide_all_advice": "Cacher les avis",
-        "opening_hours": "Heures d'ouverture"
-    }
-}
+{"nav":{"home":"Accueil","everyday":"Vie pratique","move":"Se d\u00e9placer","restaurants_bars":"Restaurants \/ Bars","shops":"Commerces","associations":"Associations","hotels":"H\u00f4tels","leisures":"Loisirs","parks":"Espaces verts","sports":"Sports","cinemas":"Cin\u00e9mas","theaters":"Th\u00e9\u00e2tres","culture":"Culture","museums":"Mus\u00e9es","historic_places":"Lieux historiques","exhibitions":"Expositions","media_library":"M\u00e9diath\u00e8que","usefull_links":"Liens utiles","legal_notice":"Mentions l\u00e9gales","listnews":"Toutes les actus","lang_short":"en","lang_long":"English"},"more_details":"Plus de d\u00e9tails","previous":"Pr\u00e9c\u00e9dent","open":"Ouvert","close":"Ferm\u00e9","next":"Suivant","back":"Retour","back_home":"Retour \u00e0 l'accueil","back_to_news_list":"Retour \u00e0 la liste des actus","back_to_shop":"Retour \u00e0 la boutique","display_more":"Afficher plus","sidebar":{"mayor_word":"Le mot du maire","mayor_word_content":"Bonjour et bienvenue dans le site du quartier de Vaise. Je vous invite \u00e0 d\u00e9couvrir cette endroit convivial et chaleureux au travers des diff\u00e9rentes rubriques. Vous en apprendrez plus sur l'ambiance de Vaise.","last_news":"Derni\u00e8re actu","weather":{"label":"M\u00e9t\u00e9o","temperature":"Temp\u00e9rature","wind_speed":"Vitesse du vent","humidity":"Humidit\u00e9"},"share":"Partager","print":"Imprimer"},"home":{"now":"En ce moment","all":"TOUT","news":"Actus","events":"\u00c9v\u00e8nements","networks":"Les r\u00e9seaux","highlight_img":3,"highlight_img_text":"Actualit\u00e9 \u00e0 mettre en avant"},"contact":{"usefull_links":[{"title":"Mairie du 9\u00e8me","img":".\/assets\/img\/usefull_links\/mairie.jpg","description":"La mairie de Vaise pourra vous renseigner sur les diff\u00e9rents points administratifs.","address":"6 Place du March\u00e9, 69009 Lyon","tel":"06 40 67 58 46","mail":"mairie.vaise@gmail.com","website":"http:\/\/www.mairie9.lyon.fr\/","website-display":"Mairie du 9\u00e8me"},{"title":"Gare de Vaise","img":".\/assets\/img\/usefull_links\/gare-de-vaise.jpg","description":"Acc\u00e8s direct au quartier de Vaise via le train. Consulter les horaires sur le site de la SNCF ci-dessous.","address":"Place de Paris, 69009 Lyon","tel":"36 35","website":"http:\/\/www.gares-sncf.com\/fr\/gare\/frhcd\/lyon-vaise","website-display":"Gare de Vaise"},{"title":"TCL Vaise","img":".\/assets\/img\/usefull_links\/metro-valmy.jpg","description":"Se d\u00e9placer \u00e0 Vaise avec les Transports en Commun Lyonnais","address":"Place du Paris, 69009 Lyon","tel":"04 26 10 12 12","website":"http:\/\/www.tcl.fr\/","website-display":"Transport en Commun Lyonnais"},{"title":"M\u00e9diath\u00e8que de Vaise","img":".\/assets\/img\/usefull_links\/mediatheque.jpg","description":"La m\u00e9diath\u00e8que vous invite pour un moment de d\u00e9tente.","address":"Place Valmy, 69009 Lyon","tel":"04 72 85 66 20","website":"https:\/\/www.bm-lyon.fr\/15-bibliotheques-et-un-bibliobus\/mediatheque-de-vaise\/","website-display":"M\u00e9diath\u00e8que de Vaise"}],"address":"Adresse","phone":"T\u00e9l\u00e9phone","website":"Site","contact_us":"Nous contacter","name":"Nom","subject":"Sujet","name_error":"Veuillez saisir votre nom","subject_error":"Veuillez saisir un sujet","mail_error":"Veuillez saisir une addresse mail valide","message_error":"Veuillez saisir votre message","placeholder_name":"Pr\u00e9nom et nom","placeholder_subject":"Sujet du message","send":"Envoyer"},"error":{"404":"<h1>Vous \u00eates perdu ?!<br>Cette page semble ne pas exister.<br><a href=\".\/\">Revenir \u00e0 l'accueil<\/a><\/h1>","label":"Erreur","no_news":"Article indisponible","no_product":"Article indisponible"},"shop":{"label":"Boutique","cheap_price":"10\u20ac et moins","normal_price":"entre 10\u20ac et 20\u20ac","expensive_price":"20\u20ac et plus","add_to_cart":"Ajouter au panier","show_cart":"Afficher le panier"},"admin":{"label":"Administration","save":"Enregistrer","add":"Ajouter","modify":"Modifier","delete":"Supprimer","date_added":"Date d'ajout","img":"Image","import":"Importer","news":{"first":"Publi\u00e9","second":"Titre","title_fr":"Titre fran\u00e7ais","title_en":"Titre anglais","content_fr":"Contenu fran\u00e7ais","content_en":"Contenu anglais","date_publish":"Date de publication","important":"Important ?","type":"Type"},"product":{"first":"Nom","second":"Prix","name_fr":"Nom fran\u00e7ais","name_en":"Nom anglais","company":"Entreprise","price":"Prix","desc_fr":"Description fran\u00e7aise","desc_en":"Description anglaise","vat":"TVA","transportation_price":"Frais de port"}},"category":{"everyday":[{"title":"Se d\u00e9placer","img":".\/assets\/img\/category\/sedeplacer.png","description":"Regroupe l'ensemble des moyens de transport disponible \u00e0 Vaise afin d'assurer au mieux vos d\u00e9placements entre les diff\u00e9rents lieux et \u00e9v\u00e8nements"},{"title":"Restauration\/Bar","img":".\/assets\/img\/restaurants\/Saigon_Wok.JPG","description":"Venez d\u00e9couvrir les meilleurs restaurants et bars du quartier de Vaise afin de contenter les fins gourmets et\/ou les amateurs de bon breuvage."},{"title":"Comerces","img":".\/assets\/img\/category\/cinema.jpg","description":"Rencontrer les commer\u00e7ants du quartier de Vaise."},{"title":"Associations","img":".\/assets\/img\/category\/association.jpg","description":"Vous souhaitez participer \u00e0 la vie associative du quartier de Vaise, n'h\u00e9sit\u00e9 plus cette rubrique vous ai consacr\u00e9."},{"title":"H\u00f4tel","img":".\/assets\/img\/category\/hotel.png","description":"Id\u00e9al pour faire une pause dans votre visite, voici notre s\u00e9lection d'h\u00f4tels."}]},"sscat":{"open":"Ouvert","close":"Ferm\u00e9","google_advice":"avis Google","show_all_advice":"Voir les avis","hide_all_advice":"Cacher les avis","opening_hours":"Heures d'ouverture"}}
